--- a/client/src/style.css
+++ b/client/src/style.css
@@ -46,7 +46,7 @@ footer {
     border: 1px solid black;
 }
 
-.Directory{
+.Directory, .AddUser {
     border: 1px black solid;
     padding: 15px;
     box-shadow: 10px 10px 10px black;
