Moved Navs and Footers to Dashboard/Directory/AddUser.js. attempting to make login page redirect to dashboard after login

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -46,9 +46,10 @@ footer {
     border: 1px solid black;
 }
 
-.Directory, .AddUser {
+.Directory, .AddUser, .loginBox {
     border: 1px black solid;
     padding: 15px;
     box-shadow: 10px 10px 10px black;
     margin-top: 10%;
 }
+
