--- a/client/src/style.css
+++ b/client/src/style.css
@@ -59,7 +59,7 @@ footer {
     border-bottom: solid 1px #D3D3D3;
     background-color: #2e2e6e;
     color: #ededed;
-    
+    width: 100%;
 }
 
 .infoRow{
