--- a/client/src/adduserstyle.css
+++ b/client/src/adduserstyle.css
@@ -1,5 +1,6 @@
 .AddUser {
     margin-top: 3%;
+    margin-bottom: 10%;
     background-color: #ededed;
     padding: 10px;
     font-family: 'Raleway', sans-serif;
@@ -7,4 +8,21 @@
     border-radius: 5px;
     border: 1px #FFFFFF solid;
     font-size: 1em;
+}
+
+.addUserbutton {
+    background-color: #2E2E6E;
+    border: #696969;
+    color: #EDEDED;
+    font-size: 1em;
+    font-family: 'Raleway', sans-serif;
+}
+  
+.addUserbutton:hover {
+    background-color: #696969;
+    color: #2e2e6e;
+  }
+
+.text-center {
+    justify-content: center;
 }
