--- a/client/src/directorystyle.css
+++ b/client/src/directorystyle.css
@@ -4,8 +4,8 @@
     box-shadow: 5px 5px 5px #696969;
     border-radius: 5px;
     border: 1px #FFFFFF solid;
-  
-    
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
 }
 
 .infoRow{
