--- a/client/src/style.css
+++ b/client/src/style.css
@@ -5,8 +5,7 @@ body {
     padding: 0;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-        
+    min-height: 100vh;    
 }
 
 /*NAVIGATION*/
@@ -39,6 +38,7 @@ body {
 .bold {
     font-weight: 900;
     font-family: 'Oswald', sans-serif;
+    font-size: 1.6em;
 }
 
 .bmarg {
@@ -72,6 +72,7 @@ body {
 /*welcome div*/
 .intro {
     margin-top: 2%;
+    font-family: 'Roboto', sans-serif !important;
 }
 
 
@@ -96,14 +97,18 @@ color: #2e2e6e;
 
 /*employee info div*/
 .userInfo{
-    margin-top: 50px;
+    margin-top: 30px;
     padding: 30px 0px 20px 0px;
+    font-size: 1.2em;
 }
 .employee {
     padding: 30px !important;
 
 }
 
+.employeeContainer {
+    margin-top: -40px;
+}
 
 
 /*LOGGED IN, LOGGED OUT, NOT AUTHORIZED*/
@@ -141,22 +146,4 @@ footer {
     background-color: #2e2e6e;
     color: #D3D3D3;
     font-family: 'Wallpoet', cursive;
-}
-
-/*part of footer*/
-.title {
-    text-align: center;
-    border-top: solid 1px #969696;
-}
-
-.red{
-    border: solid 4px red;
-}
-
-.green {
-    border: solid 4px green;
-}
-
-.yellow {
-    border:solid 4px yellow;
 }
