--- a/client/src/performancestyle.css
+++ b/client/src/performancestyle.css
@@ -46,7 +46,7 @@
     
   tr {
     border-top: 1px solid #C1C3D1;
-    border-bottom-: 1px solid #C1C3D1;
+    border-bottom: 1px solid #C1C3D1;
     color:#666B85;
     font-size:12px;
     font-weight:normal;
