updated ad reviews

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -112,7 +112,8 @@ body {
 /*welcome div*/
 .intro {
     margin-top: 2%;
-    font-family: 'Roboto', sans-serif !important;
+    font-family: 'Roboto', sans-serif !important
+}
 
 /*DASHBOARD*/
 /*welcome div*/
