--- a/client/src/adduserstyle.css
+++ b/client/src/adduserstyle.css
@@ -7,7 +7,7 @@
     border-radius: 5px;
     border: 1px #FFFFFF solid;
     font-family: 'Roboto', sans-serif;
-    font-size: 1em;
+    font-size: 1.5vh;
 }
 
 .addUserbutton {
@@ -20,7 +20,7 @@
 }
   
 .addUserbutton:hover {
-    background-color: #696969;
+    background-color: #8f8b8b;
     color: #2e2e6e;
   }
 
