--- a/client/src/style.css
+++ b/client/src/style.css
@@ -21,22 +21,60 @@ body {
     transform: scale(1.2);
 }
 
+.navbar{
+    border-bottom: solid 1px #D3D3D3;
+    background-color: #2e2e6e;
+    color: #ededed;
+    width: 100%;
+    font-size: 1.5em;
+}
+
 .header{
     transition: transform .2s;
     margin: 4px 2px 4px 0;
 
 }
 .header:hover {
-    background-color: #696969;
+    background-color: #8f8b8b;
     color: #2e2e6e !important;
     font-weight: 900;
     transform: scale(1.1);
 }
 
-/*NAVIGATION*/
 .toggle {
     background-color: #ededed!important;
     border:solid 1px #C7C7C7;
+}
+
+/*ADD BUTTON DROPDOWN */
+#collasible-nav-dropdown {
+    color: #ededed !important;  
+}
+
+#collasible-nav-dropdown::after {
+    content: none;
+}
+
+#collasible-nav-dropdown:hover{
+    color: #2e2e6e !important;
+}
+
+.dropdown-menu {
+    background-color:#C7C7C7;
+    text-align: center !important;
+}
+
+.show{
+    text-align: center !important;
+}
+
+.dropdown-item {
+    color:#696969;
+}
+
+.dropdown-item:hover {
+    background: #2e2e6e;
+    color: #ededed;
 }
 
 /*CUSTOM CLASSES*/
@@ -54,34 +92,13 @@ body {
 .ltgray {
     color: #ededed !important;  
 }
-.navbar{
-    border-bottom: solid 1px #D3D3D3;
-    background-color: #2e2e6e;
-    color: #ededed;
-    width: 100%;
-    font-size: 1.5em;
-}
 
-
-/*CUSTOM CLASSES*/
 .bold {
     font-weight: 900;
     font-family: 'Oswald', sans-serif;
     font-size: 1.6em;
 }
 
-.bmarg {
-    margin-bottom: 20px;
-}
-
-.ltgray {
-    color: #ededed !important;
-    
-}
-
-.infoDiv {
-    width: 75%;
-}
 
 .Button {
     background-color: #2E2E6E;
@@ -92,25 +109,28 @@ body {
 }
   
 .Button:hover {
-    background-color: #696969;
+    background-color: #8f8b8b;
+    ;
     color: #2e2e6e;
     font-weight: 900;
-  }
+}
 
 
 /*DASHBOARD*/
 /*welcome div*/
+.infoDiv {
+    width: 75%;
+}
+
 .intro {
     margin-top: 2%;
     font-family: 'Roboto', sans-serif !important;
 }
-/*DASHBOARD*/
-/*welcome div*/
 
 .editBtn {
     float: right;
-    margin-top: 25%;
-    margin-right: 10%;
+    margin-top: 20%;
+    margin-right: 1%;
     background-color: #2E2E6E;
     border: #696969;
     color: #EDEDED;
@@ -121,30 +141,19 @@ body {
 
 
 .editBtn:hover {
-background-color: #696969;
+background-color: #8f8b8b;
 color: #2e2e6e;
-}
-
-/*employee info div*/
-.userInfo{
-    margin-top: 25px;
-    padding: 30px 0px 20px 0px;
-    font-size: 1.2em;
-}
-.employee {
-    padding: 30px !important;
 }
 
 
 /*employee info div*/
 .userInfo{
     margin-top: 30px;
-    padding: 30px 0px 20px 0px;
-    font-size: 1.2em;
+    padding: 30px 0px 30px 0px;
+    font-size: 2vh;
 }
 .employee {
     padding: 30px !important;
-
 }
 
 .employeeContainer {
@@ -176,7 +185,6 @@ color: #2e2e6e;
     box-shadow: 5px 5px 5px #696969;
     border-radius: 5px;
     border: 1px #FFFFFF solid;
-    font-size: 1em;
 }
 
 footer {
