--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #C7C7C7;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     justify-content: center;
@@ -35,7 +35,7 @@ body {
 
 }
 .header:hover {
-    background-color: #8f8b8b;
+    background-color: #C7C7C7;
     color: #2e2e6e !important;
     font-weight: 900;
     transform: scale(1.1);
@@ -57,6 +57,7 @@ body {
 
 #collasible-nav-dropdown:hover{
     color: #2e2e6e !important;
+    background-color: #C7C7C7;
 }
 
 .dropdown-menu {
@@ -69,12 +70,18 @@ body {
 }
 
 .dropdown-item {
-    color:#696969;
+    color:#2e2e6e;
+    background: #C7C7C7;
+
 }
 
 .dropdown-item:hover {
     background: #2e2e6e;
     color: #ededed;
+}
+
+.dropdown-divider{
+    border: 1px solid #969696;
 }
 
 /*CUSTOM CLASSES*/
@@ -95,10 +102,11 @@ body {
 
 .bold {
     font-weight: 900;
-    font-family: 'Oswald', sans-serif;
-    font-size: 1.6em;
 }
 
+.oswald {
+    font-family: 'Oswald', sans-serif;
+}
 
 .Button {
     background-color: #2E2E6E;
@@ -109,7 +117,7 @@ body {
 }
   
 .Button:hover {
-    background-color: #8f8b8b;
+    background-color:#C7C7C7;
     ;
     color: #2e2e6e;
     font-weight: 900;
@@ -117,15 +125,6 @@ body {
 
 
 /*DASHBOARD*/
-/*welcome div*/
-.infoDiv {
-    width: 75%;
-}
-
-.intro {
-    margin-top: 2%;
-    font-family: 'Roboto', sans-serif !important;
-}
 
 .editBtn {
     float: right;
@@ -145,20 +144,28 @@ background-color: #8f8b8b;
 color: #2e2e6e;
 }
 
+h5 {
+    font-size: 3.5vh;
+}
 
 /*employee info div*/
 .userInfo{
     margin-top: 30px;
     padding: 30px 0px 30px 0px;
-    font-size: 2vh;
+    font-size: 2.5vh;
+    font-family: 'Oswald', sans-serif;
 }
 .employee {
     padding: 30px !important;
+    font-family: 'Oswald', sans-serif !important;
+
 }
 
 .employeeContainer {
     margin-top: -40px;
 }
+
+
 
 
 /*LOGGED IN, LOGGED OUT, NOT AUTHORIZED*/
@@ -178,7 +185,7 @@ color: #2e2e6e;
 }
 
 /*GENERAL STYLE DIVS*/
-.employee, .intro, .loginBox , .notAuthorized{
+.employee, .loginBox, .notAuthorized{
     background-color: #ededed;
     padding: 10px;
     font-family: 'Raleway', sans-serif;
