--- a/client/src/chatboxstyle.css
+++ b/client/src/chatboxstyle.css
@@ -8,13 +8,13 @@ margin-top: 4%;
 font-size:2vh;
 font-family: 'Roboto', sans-serif;
 height:auto;
+min-height:30px; 
 float:right;
 }
 
 .messages {
     overflow: auto;
-    height:250px;
-
+    height: 300px;
 }
 
 .messagearea {
