--- a/client/src/adduserstyle.css
+++ b/client/src/adduserstyle.css
@@ -52,6 +52,8 @@
     padding: 10px 20px 10px 20px;
     font-family: 'Oswald', sans-serif;
     border-radius:10%;
+    justify-content: center;
+    align-items: center;
 }
 
 .uploadbutton:hover {
